client/views/css/DoritoMenu.less
/* CSS declarations go here */


html {
    background: black;
    height: 100%;
}

body {
    height: 100%;
    background-size: contain;
    opacity: 0;
    background: url(../img/background.jpg) no-repeat center center;
}

body[data-menu=gameservers] .overlay {
    width: 76vw;
    height: 80vh;
    top: 10vh;
    left: 17vw;
    padding-right: 0;
}

#wrap {
    min-height: 100%;
    height: auto;
    margin: 0 auto -60px;
    padding: 0 0 60px;
}

#wrap > .container {
    padding: 60px 15px 0;
}

.container .text-muted {
    margin: 20px 0;
}

.overlay {
    position: absolute;
    width: 40vw;
    height: 70vh;
    background: rgba(20, 20, 32, 1);
    color: white;
    top: 15vh;
    left: 30vw;
    padding: 20px;
    border-radius: 6px;
    opacity: 0;
    transition: opacity 1.0s;
    border-radius: 0;
    box-shadow: 0px 0px 26px 2px rgba(255, 255, 255, 0.25);
    
    &.active {
        opacity: 1;
    }
}


.credits {
    color: white;
    font-size: 25px;
    padding: 0 20px;
    background: url(../img/eldorito-logo.png) no-repeat center top;
    padding-top: 95px;
    
    .right-col {
        text-align: right;
    }
    .heading {
        color: white;
        font-size: 37px;
        text-transform: uppercase;
        margin: 0 auto;
        text-align: center;
        margin-bottom: 10px;
    }
}


.load {
    opacity: 1;
    transition: all 1.0s;
}

.md-snackbar {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
}

